Review: rewrite SplitFileProcessingService.startJob() without executeBlocking()